--- a/Data_analytics_Exercise-10/index.html
+++ b/Data_analytics_Exercise-10/index.html
@@ -40,8 +40,11 @@
                         <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
                       </li>
                     </ul>
+                    <select class="list-group" id="shape">
+                      <option>Select a shape (optional)</option>
+                    </select>
                   </div>
-                  <button id="filter-btn" type="submit" class="btn btn-default">Filter Table</button>
+                  <button id="filter-btn" type="submit" class="btn btn-default">Submit</button>
                 </form>
               </div>
             </div>
